--- a/themes/simple-a/layouts/chrome/footer.html
+++ b/themes/simple-a/layouts/chrome/footer.html
@@ -1,10 +1,10 @@
 
 		        <footer>
-		        	Built with <a href="https://github.com/spf13/hugo">Hugo</a> 
-		        	<p>© Alexander Ivanov 2014</p>
+		        	Built with <a href="https://github.com/spf13/hugo">Hugo</a>
+		        	<p>© mitakeck 2017</p>
 		        </footer>
 		    </div>
-		  </div>    
+		  </div>
 		</div>
       </div>
     </div>
