--- a/themes/simple-a/static/css/style.css
+++ b/themes/simple-a/static/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-size: 16px; 
+  font-size: 16px;
 }
 
 /* Custom container */
@@ -17,37 +17,37 @@ body {
 figure.full img {
   width: 100%;
   max-width: 100%;
-  height: auto;  
+  height: auto;
 }
 
 figure.medium
 {
     width:400px;
     margin-top:30px;
-    margin-bottom:30px;            
+    margin-bottom:30px;
     margin-left: auto;
-    margin-right: auto;    
+    margin-right: auto;
 }
 
 figure.large
 {
     width:500px;
     margin-top:30px;
-    margin-bottom:30px;            
+    margin-bottom:30px;
     margin-left: auto;
-    margin-right: auto;    
+    margin-right: auto;
 }
 
 figure.large img {
-    width:500px; 
+    width:500px;
     height: auto;
 }
 
 figcaption
 {
-    font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    background-color: #EFEFEF;    
-    font-size: 90%;        
+    font-family: 'Helvetica Neue', 'Helvetica','YuGothic', 'Yu Gothic', '游ゴシック', '游ゴシック体', 'Hiragino Kaku Gothic Pro', 'Meiryo', 'MS PGothic';
+    background-color: #EFEFEF;
+    font-size: 90%;
     margin-left: 1%;
     padding-left: 4%;
     padding-right: 4%;
@@ -55,23 +55,23 @@ figcaption
     display: block;
 }
 
-footer { 
+footer {
  position: relative;
- z-index: 10; 
+ z-index: 10;
  line-height: normal;
- margin-top: 10px; 
+ margin-top: 10px;
  font-size: 0.6em;
  text-transform: uppercase;
- font-family: 'Liberation Sans', Helvetica, sans-serif; 
- padding-top: 2em; 
+ font-family: 'Helvetica Neue', 'Helvetica','YuGothic', 'Yu Gothic', '游ゴシック', '游ゴシック体', 'Hiragino Kaku Gothic Pro', 'Meiryo', 'MS PGothic';
+ padding-top: 2em;
  text-align: center;
 }
 
 .content h1 {
-  font-family: Philosopher, serif;
+  font-family: 'Helvetica Neue', 'Helvetica','YuGothic', 'Yu Gothic', '游ゴシック', '游ゴシック体', 'Hiragino Kaku Gothic Pro', 'Meiryo', 'MS PGothic';
   color: #3F3F3F;
   font-size: 1.8em;
-  text-align: center; 
+  text-align: center;
   margin-bottom: 40px;
 }
 
@@ -94,7 +94,7 @@ footer {
   border-bottom: 1px solid #989898;
 }
 
-.container {  
+.container {
   margin: 0 auto;
   max-width: 960px;
   margin-top: 5%;
@@ -109,7 +109,7 @@ footer {
   padding-top: 5%;
 }
 
-.posts li {  
+.posts li {
   line-height: 90%;
   list-style: none;
 }
@@ -139,7 +139,7 @@ p {
 .post .content {
   text-align: left;
   margin-top: 3em;
-  font-family: "Liberation Serif", "Palatino Linotype", Georgia, serif;
+  font-family: 'Helvetica Neue', 'Helvetica','YuGothic', 'Yu Gothic', '游ゴシック', '游ゴシック体', 'Hiragino Kaku Gothic Pro', 'Meiryo', 'MS PGothic';
   font-size: 18px;
 }
 
@@ -160,7 +160,7 @@ p {
 .post-header h1 {
   font-size: 1.8em;
   color: #444;
-  font-family: Philosopher;
+  font-family: 'Helvetica Neue', 'Helvetica','YuGothic', 'Yu Gothic', '游ゴシック', '游ゴシック体', 'Hiragino Kaku Gothic Pro', 'Meiryo', 'MS PGothic';
   margin-bottom: 10px;
 }
 
@@ -177,7 +177,7 @@ p {
 
 .post-time {
   margin-top: 3px;
-  font-family: Philosopher;
+  font-family: 'Helvetica Neue', 'Helvetica','YuGothic', 'Yu Gothic', '游ゴシック', '游ゴシック体', 'Hiragino Kaku Gothic Pro', 'Meiryo', 'MS PGothic';
 }
 
 .post-after {
@@ -212,7 +212,7 @@ p {
   display: inline-block;
   margin-bottom: 8px;
   border-bottom: 3px solid #fa5305;
-  font-family: 'Liberation Sans', Helvetica, 'Helvetica Neue', sans-serif;
+  font-family: 'Helvetica Neue', 'Helvetica','YuGothic', 'Yu Gothic', '游ゴシック', '游ゴシック体', 'Hiragino Kaku Gothic Pro', 'Meiryo', 'MS PGothic';
 }
 
 .tags a:hover {
@@ -238,12 +238,12 @@ blockquote {
   padding: 0 0 0 15px;
   margin: 0 0 20px;
   border-left: 5px solid #fa5305;
-  font-family: Philosopher;
+  font-family: 'Helvetica Neue', 'Helvetica','YuGothic', 'Yu Gothic', '游ゴシック', '游ゴシック体', 'Hiragino Kaku Gothic Pro', 'Meiryo', 'MS PGothic';
   font-size: 18px;
 }
 
 .tag-list {
-  font-family: Philosopher;
+  font-family: 'Helvetica Neue', 'Helvetica','YuGothic', 'Yu Gothic', '游ゴシック', '游ゴシック体', 'Hiragino Kaku Gothic Pro', 'Meiryo', 'MS PGothic';
   max-width: 700px;
   margin: auto;
 }
@@ -270,7 +270,7 @@ blockquote {
   text-transform: uppercase;
   text-decoration: none;
   font-size: 15px;
-  font-family: 'Liberation Sans', Helvetica, sans-serif;
+  font-family: 'Helvetica Neue', 'Helvetica','YuGothic', 'Yu Gothic', '游ゴシック', '游ゴシック体', 'Hiragino Kaku Gothic Pro', 'Meiryo', 'MS PGothic';
   border-bottom: 4px solid #646464;
 }
 
@@ -287,11 +287,11 @@ pre code {
 }
 
 .code {
-  font-family: 'Liberation Mono', Monaco, Consolas;
+  font-family: 'Helvetica Neue', 'Helvetica','YuGothic', 'Yu Gothic', '游ゴシック', '游ゴシック体', 'Hiragino Kaku Gothic Pro', 'Meiryo', 'MS PGothic';
   display: block;
 }
 
 code, pre {
-    font-family: 'Liberation Mono', Monaco, Consolas;
-    font-size: 14px;
+  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  font-size: 14px;
 }
