--- a/themes/simple-a/layouts/chrome/meta.html
+++ b/themes/simple-a/layouts/chrome/meta.html
@@ -1,6 +1,6 @@
     <meta charset="utf-8">
-    <title>ALEXFINN</title>
-    
+    <title>@mitakeck</title>
+
     <meta name="author" content="Alexander 'alexfinn' Ivanov">
 
     <!-- Enable responsive viewport -->
