--- a/themes/simple-a/layouts/chrome/header.html
+++ b/themes/simple-a/layouts/chrome/header.html
@@ -15,7 +15,7 @@
 
   </head>
   <body>
-    {{ template "theme/chrome/menu.html" }}
+    {{ template "theme/chrome/menu.html" . }}
 
 <div class="container">
   <div class="content">
