--- a/themes/simple-a/layouts/chrome/meta.html
+++ b/themes/simple-a/layouts/chrome/meta.html
@@ -1,7 +1,7 @@
     <meta charset="utf-8">
-    <title>@mitakeck</title>
+    <title>mitakeck</title>
 
-    <meta name="author" content="Alexander 'alexfinn' Ivanov">
+    <meta name="author" content="@mitakeck">
 
     <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
