--- a/themes/simple-a/layouts/indexes/tag.html
+++ b/themes/simple-a/layouts/indexes/tag.html
@@ -1,4 +1,4 @@
-{{ template "theme/chrome/header.html" . }}
+{{ template "chrome/header.html" . }}
     <!-- CONTENT -->
   <div class="tag-list">
       <p id="tag-name">
@@ -13,4 +13,4 @@
         {{ end }}
   </div>      
 
-{{ template "theme/chrome/footer.html" . }}
+{{ template "chrome/footer.html" . }}
