--- a/themes/simple-a/layouts/index.html
+++ b/themes/simple-a/layouts/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    {{ template "theme/chrome/meta.html" . }}  
-    {{ template "theme/chrome/includes.html" . }}
+    {{ template "chrome/meta.html" . }}  
+    {{ template "chrome/includes.html" . }}
     <link rel="shortcut icon" href="/images/alexfinn.ico"> 
     <link rel="apple-touch-icon" href="">
     <link rel="canonical" href="{{ .Permalink }}">
@@ -11,7 +11,7 @@
   </head>
 
   <body>    
-    {{ template "theme/chrome/menu.html" }}
+    {{ template "chrome/menu.html" }}
 
 {{ $baseurl := .Site.BaseURL }}
 
@@ -44,4 +44,4 @@
     </div>  
   </div>
 
-{{ template "theme/chrome/footer.html" }}
+{{ template "chrome/footer.html" }}
